--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <!-- <header>
       <h1>3Dine</h1>
-    </header>
-
+    </header> -->
     <h1 class='title has-text-centered'>
         Menu
     </h1>
