--- a/webiste.html
+++ b/webiste.html
@@ -10,6 +10,19 @@
 </head>
   
 <body>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <!-- Logo on the left -->
+            <a class="navbar-item" href="#">
+                <img src="path/to/your/logo.png" alt="Logo">
+            </a>
+
+            <!-- 3Dine name on the right -->
+            <div class="navbar-item has-text-centered">
+                <h1 class="title is-3">3Dine</h1>
+            </div>
+        </div>
+    </nav>
     <h1 class='title has-text-centered'>
         Menu
     </h1>
